# argparse_dataclass

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.rst  argparse_dataclass.py  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: main.yml
tests/: example.py  example_choices.py  test_annotations.py  test_argumentgroups.py  test_argumentparser.py  test_basic.py  test_functional.py
